// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterRow rendering should work with full props 1`] = `
<div
  className="character-picker__row"
>
  <div
    className="character inline"
  >
    <div
      className="character-label"
    >
      <span
        className="character-label__name"
      >
        Testy McTestface
      </span>
      <span
        className="character-label__item"
      >
        Level 
        1
      </span>
      <div
        className="list-label inline"
      >
        male
      </div>
      <span
        className="character-label__item"
      >
        Human
      </span>
      <span
        className="character-label__item"
      >
        Fighter
      </span>
      <div
        className="list-label inline character-label__alignment"
      >
        true neutral
      </div>
    </div>
    <div
      className="nice-progress brand"
    >
      <div
        className="nice-progress-fill"
        style={
          Object {
            "height": "1.25rem",
            "width": "75%",
          }
        }
      >
        Level 1 (3 / 4)
      </div>
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn icon fa-user accent"
        onClick={[Function]}
      >
        Choose
      </a>
    </div>
  </div>
</div>
`;

exports[`CharacterRow rendering should work with minimum props 1`] = `
<div
  className="character-picker__row"
>
  <div
    className="character inline"
  >
    <div
      className="character-label"
    >
      <span
        className="character-label__name"
      >
        Testy McTestface
      </span>
      <span
        className="character-label__item"
      >
        Level 
        1
      </span>
      <div
        className="list-label inline"
      >
        male
      </div>
      <span
        className="character-label__item"
      >
        Human
      </span>
      <span
        className="character-label__item"
      >
        Fighter
      </span>
      <div
        className="list-label inline character-label__alignment"
      >
        true neutral
      </div>
    </div>
    <div
      className="nice-progress brand"
    >
      <div
        className="nice-progress-fill"
        style={
          Object {
            "height": "1.25rem",
            "width": "75%",
          }
        }
      >
        Level 1 (3 / 4)
      </div>
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn icon fa-user-secret"
        onClick={[Function]}
      >
        Pick
      </a>
    </div>
  </div>
</div>
`;
